--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "type": "git",
     "url": "https://github.com/JustADeer/justadeer.github.io"
   },
-  "homepage": "",
+  "homepage": "https://justadeer.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
